hphp/hack/test/typecheck/class_pointers/syntactic_error.php.exp
ERROR: File "syntactic_error.php", line 15, characters 17-24:
Using `C::class` in this position will trigger an implicit runtime conversion to string, please use `nameof C` (Typing[4482])
ERROR: File "syntactic_error.php", line 16, characters 18-25:
Using `C::class` in this position will trigger an implicit runtime conversion to string, please use `nameof C` (Typing[4482])
ERROR: File "syntactic_error.php", line 28, characters 40-47:
Using `C::class` in this position will trigger an implicit runtime conversion to string, please use `nameof C` (Typing[4482])
ERROR: File "syntactic_error.php", line 29, characters 42-49:
Using `C::class` in this position will trigger an implicit runtime conversion to string, please use `nameof C` (Typing[4482])
ERROR: File "syntactic_error.php", line 32, characters 11-18:
Using `C::class` in this position will trigger an implicit runtime conversion to string, please use `nameof C` (Typing[4482])
ERROR: File "syntactic_error.php", line 36, characters 12-19:
Using `C::class` in this position will trigger an implicit runtime conversion to string, please use `nameof C` (Typing[4482])
ERROR: File "syntactic_error.php", line 46, characters 3-10:
Using `C::class` in this position will trigger an implicit runtime conversion to string, please use `nameof C` (Typing[4482])
ERROR: File "syntactic_error.php", line 47, characters 10-17:
Using `C::class` in this position will trigger an implicit runtime conversion to string, please use `nameof C` (Typing[4482])
ERROR: File "syntactic_error.php", line 49, characters 9-16:
Using `C::class` in this position will trigger an implicit runtime conversion to string, please use `nameof C` (Typing[4482])
ERROR: File "syntactic_error.php", line 53, characters 20-30:
Using `self::class` in this position will trigger an implicit runtime conversion to string, please use `nameof self` (Typing[4482])
ERROR: File "syntactic_error.php", line 54, characters 29-39:
Using `self::class` in this position will trigger an implicit runtime conversion to string, please use `nameof self` (Typing[4482])
ERROR: File "syntactic_error.php", line 57, characters 14-21:
Using `E::class` in this position will trigger an implicit runtime conversion to string, please use `nameof E` (Typing[4482])
ERROR: File "syntactic_error.php", line 61, characters 7-14:
Using `E::class` in this position will trigger an implicit runtime conversion to string, please use `nameof E` (Typing[4482])
ERROR: File "syntactic_error.php", line 65, characters 6-13:
Using `C::class` in this position will trigger an implicit runtime conversion to string, please use `nameof C` (Typing[4482])
ERROR: File "syntactic_error.php", line 66, characters 8-15:
Using `C::class` in this position will trigger an implicit runtime conversion to string, please use `nameof C` (Typing[4482])
ERROR: File "syntactic_error.php", line 67, characters 9-16:
Using `C::class` in this position will trigger an implicit runtime conversion to string, please use `nameof C` (Typing[4482])
ERROR: File "syntactic_error.php", line 68, characters 10-17:
Using `C::class` in this position will trigger an implicit runtime conversion to string, please use `nameof C` (Typing[4482])
ERROR: File "syntactic_error.php", line 69, characters 9-16:
Using `C::class` in this position will trigger an implicit runtime conversion to string, please use `nameof C` (Typing[4482])
ERROR: File "syntactic_error.php", line 70, characters 12-19:
Using `C::class` in this position will trigger an implicit runtime conversion to string, please use `nameof C` (Typing[4482])
